modified resume web page

--- a/resume.html
+++ b/resume.html
@@ -9,64 +9,99 @@
     <div class="container">
         <div class="container-left">
             <div class="container-profile">
-                <img src="image/profile.jpg" alt="profile">
-                <h1>Edward Lobanovskiy</h1>
-                <h3>Front End Developer</h3>
+                <img src="image/profile.jpg" alt="profile"><br>
+                <div class="heading">
+                    Edwaradh Lobanovskiy
+                </div>
+                <span class="sub-heading">Front End Developer</span>
             </div>
             <div class="container-navigation-bar">
-                <h4><i class="fa fa-envelope"></i> ed2kloba@gmail.com</h4><hr>
-                <h4><i class="fa fa-map-marker"></i> Los Angeles, CA</h4><hr>
-                <h4><i class="fa fa-briefcase"></i> Full Time</h4><hr>
-                <h4><i class="fa fa-user"></i> Sales and Marketing</h4><hr>
+                <div class="options">
+                    <span class="menu"><i class="fa fa-envelope"></i> ed2kloba@gmail.com</span>
+                </div>
+                <div class="options">
+                    <span class="menu"><i class="fa fa-map-marker"></i> Los Angeles, CA</span>
+                </div>
+                <div class="options">
+                    <span class="menu"><i class="fa fa-suitcase"></i> Full Time</span>
+                </div>
+                <span class="menu"><i class="fa fa-user"></i> Sales and Marketing</span>
                 <button>Download Resume</button>
             </div>
             </div>
             <div class="container-right">
                 <div class="container-summary">
-                    <h1>Professional Summary</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Hic magni facere dolorem alias quos, quas, tempore ab harum quae 
-                         ad corrupti dicta aperiam id rem vero. Quisquam aut in quis rerum 
-                         sit neque cupiditate voluptatem, distinctio, dignissimos maiores
-                          recusandae eius nihil labore excepturi commodi eaque officia dolore
-                           quo. Magni sapiente hic ad error, animi autem possimus ipsum quaerat 
-                           dolores! Dolorum odio quam provident labore maxime hic amet odit.
-                            Incidunt nisi harum distinctio a pariatur magni fuga vel eaque sit,
-                             officiis consequuntur iure nihil architecto tenetur ullam, nemo fugiat
-                              assumenda delectus! Quo id repellendus eaque porro maxime provident
-                               officia dignissimos vero.</p>
+                    <span class="heading">Professional Summary</span>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                         Rerum exercitationem maxime, odit, debitis obcaecati,
+                          ad pariatur eligendi temporibus quibusdam tempora 
+                          repudiandae esse eos in iusto a voluptate blanditiis 
+                          amet vitae soluta sapiente! Veniam doloremque fugit 
+                          tempora accusamus? Unde aspernatur quod error. Non iure
+                           iusto quidem error facere, fugit eaque unde nostrum est
+                            qui ipsum ut voluptatem sit saepe quam suscipit distinctio
+                             doloribus architecto veniam quae, voluptatibus ea ab dicta.</p>
                 </div>
                 <div class="container-experience">
-                    <h1>Work Experience</h1>
-                    <span>Senior Front End Developer</span>
-                    <span class="working-hours">Full Time</span><br><br>
-                    <span class="company-name"><i class="fa fa-building"></i> Apple Inc</span>
-                    <span class="company-location"><i class="fa fa-map-marker"></i> Los Angeles</span>
-                    <span class="duration"><i class="fa fa-calendar"></i> April 12.2020</span>
-                    <hr>
-                    <span>Junior Front End Developer</span>
-                    <span class="working-hours">Full Time</span><br><br>
-                    <span class="company-name"><i class="fa fa-building"></i> Figma Inc</span>
-                    <span class="company-location"><i class="fa fa-map-marker"></i> San Fransisco</span>
-                    <span class="duration"><i class="fa fa-calendar"></i> April 12.2020 - july 19.2018</span>
-                    <hr>
-                    <span>Intern Developer</span>
-                    <span class="working-hours">Full Time</span><br><br>
-                    <span class="company-name"><i class="fa fa-building"></i> Microsoft</span>
-                    <span class="company-location"><i class="fa fa-map-marker"></i> New York City</span>
-                    <span class="duration"><i class="fa fa-calendar"></i> April 12.2017 - july 19.2018</span><br>
-                    <hr>
+                    <div class="heading">
+                        Work Experience
+                    </div>
+                    <div class="role-information">
+                        <div class="role">
+                            <span class="sub-heading">Senior Front End Developer</span>
+                            <span class="hours">Full Time</span>
+                        </div>
+                        <div class="sub-informations">
+                            <span class="company-name"><i class="fa fa-building"></i> Apple Inc.</span>
+                            <span class="company-location"><i class="fa fa-map-marker"></i> Los Angeles</span>
+                            <span class="duration"><i class="fa fa-calendar"></i> April 12.2020</span>  
+                       </div>
+                    </div>
+                    <div class="role-information">
+                        <div class="role">
+                            <span class="sub-heading">Junior Front End Developer</span>
+                            <span class="hours">Full Time</span>
+                        </div>
+                        <div class="sub-informations">
+                            <span class="company-name"><i class="fa fa-building"></i> Figma Inc</span>
+                            <span class="company-location"><i class="fa fa-map-marker"></i> San Fransisco</span>
+                            <span class="duration"><i class="fa fa-calendar"></i> April 12.2020 - July 19.2018</span>
+                        </div>
+                    </div>
+                    <div class="role-information">
+                        <div class="role">
+                            <span class="sub-heading">Intern Developer</span>
+                            <span class="hours">Full Time</span>
+                        </div>
+                        <div class="sub-informations">
+                            <span class="company-name"><i class="fa fa-building"></i> Microsoft</span>
+                            <span class="company-location"><i class="fa fa-map-marker"></i> New York City</span>
+                            <span class="duration"><i class="fa fa-calendar"></i> April 12.2017 - July 19.2018</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="container-education">
-                    <h1>Education</h1>
-                    <h3>Master in Software Engineering</h3>
-                    <span class="institute-name"><i class="fa fa-university"></i> GRT Institute Of Technology</span>
-                    <span class="duration"><i class="fa fa-calendar"></i> Jan 12.2014 - Dec 19.2016</span><br>
-                    <hr>
-                    <h3>Bachelor in Software Engineering</h3>
-                    <span class="institute-name"><i class="fa fa-university"></i> GRT Institute Of Technology</span>
-                    <span class="duration"><i class="fa fa-calendar"></i>April 12.2014 - july 19.2016</span><br>
-                    <hr>
+                    <div class="heading">
+                        Education
+                    </div>
+                <div class="education-information">
+                        <div class="sub-heading">
+                            <span class="sub-heading">Master in Software Engineering</span>
+                        </div>
+                    <div class="sub-informations">
+                            <span class="institute-name"><i class="fa fa-graduation-cap"></i> GRT Institute Of Technology</span>
+                            <span class="duration"><i class="fa fa-calendar"></i> Jan 12.2014 - Dec 19.2016</span>
+                    </div>
+                </div>
+                <div class="education-information">
+                        <div class="sub-heading">
+                            <span >Bachelor in Software Engineering</span>
+                        </div>
+                       <div class="sub-informations">
+                         <span class="institute-name"><i class="fa fa-graduation-cap"></i> GRT Institute Of Technology</span>
+                         <span class="duration"><i class="fa fa-calendar"></i> April 12.2014 - july 19.2016</span>
+                       </div>
+                </div>
                 </div>
         
             </div>
